<resources>
    <string name="app_name">PackAndMove</string>
    <string name="welcome_toolbar_textview">WELCOME</string>
    <string name="welcome_textview">WELCOME TO PACK AND MOVE APP</string>
    <string name="get_started">Swipe to get started</string>
    <string name="instructions_textview">Make sure you take multiple photos of the room containing the items you wish to move from different angles</string>
    <string name="slide_finishing_text">Finish your request by selecting any additional services you need and taking a photo of the building containing your items, if you are ubsure of it\'s accessibility</string>
    <string name="get_started_button_label">Lets get started</string>
    <string name="mainactivity_header"> PACK &amp;MOVE</string>
    <string name="residential_removal_textview">Residential Removal</string>
    <string name="office_removal_textview">Office Removal</string>
    <string name="factory_heavy_textview">Factory and Heavy Experimental Removal</string>
    <string name="packaging_textview">Packaging</string>
    <string name="carton_textview">Carton Box Supply</string>
    <string name="long_distance_textview">Long Distance Transportation</string>
    <string name="rental_truck_textview">Truck Rental</string>
    <string name="door_to_door_textview">Door-to-Door-Services</string>
    <string name="temporary_storage_textview">Temporary Storage</string>
    <string name="international_transport_tetxview">International Transport</string>
    <string name="labour_supply_textview">Labour Supply</string>
    <string name="custom_clearence_tetxview">Custom Clearance</string>
    <string name="basic_info_header">BASIC INFORMATION</string>
    <string name="contact_info_text">YOUR CONTACT INFO</string>
    <string name="residential_removal_header">Residential Removal</string>
    <string name="office_removal_header">Office Removal</string>
    <string name="textview_name">Name</string>
    <string name="email_textview">Email</string>
    <string name="textview_phone">Phone</string>
    <string name="name_hint">First and Last name</string>
    <string name="email_hint">Email Address</string>
    <string name="phone_hint">Phone Number</string>
    <string name="factory_heavy_header">Factory &amp; Heavy Equipment Removal</string>
    <string name="packaging_header">Packaging</string>
    <string name="carton_box_supply_textview">Carton Box Supply</string>
    <string name="long_distance_header">Long Distance Transportation</string>
    <string name="truck_rental_header">Truck Rental</string>
    <string name="door_to_door_header">Door To Door Services</string>
    <string name="temporary_storage_haeader">Temporary Storage</string>
    <string name="international_transport_header">International Transport</string>
    <string name="labour_supply_header">Labour Supply</string>
    <string name="custom_clearence_header">Custom Clearance</string>
    <string name="current_address_title_textview">YOUR CURRENT ADDRESS</string>
    <string name="hint_street_num">Street &amp;  Number</string>
    <string name="zip_postal_code_hint">Zip/Postal Code</string>
    <string name="city_hint">City</string>
    <string name="country_textview">Country</string>
    <string name="button_continue_text">Continue</string>
    <string name="overview_header">OVERVIEW</string>
    <string name="overview_text_header">OVERVIEW</string>
    <string name="rooms_and_photos_title">ROOMS AND PHOTOS</string>
    <string name="add_a_room_button_label">Add a room</string>
    <string name="start_adding_rrom_header">START</string>
    <string name="rooms_title_textview">ROOMS</string>
    <string name="textview_floor">Floor</string>
    <string name="photos_textview">PHOTOS</string>
    <string name="add_photo_textview">Add photo</string>
    <string name="save_button_textview">Save</string>
    <string name="alert_dialog_info">Add one or more photos of each row in your current residence. This will helps us to prepare for the location.</string>
    <string name="air_outbound_header">AIR OUTBOUND</string>
    <string name="organization_name_textfield_title">Organization Name</string>
    <string name="company_name_hint_textfield">Company Name</string>
    <string name="customer_name_edittext_title">Customer Name</string>
    <string name="your_name_textfieldhint">Your Name</string>
    <string name="building_no_textfield_title_textview">Building No</string>
    <string name="building_number_textfield_hint">Building Number</string>
    <string name="room_no_textfield_title_textview">Room No</string>
    <string name="street_road_textfield_title_textview">Street / Road</string>
    <string name="township_textfield_title_textview">Township</string>
    <string name="city_state_textfield_title_textview">City / State</string>
    <string name="pickup_address_textview_title">PICKUP ADDRESS</string>
    <string name="residential_type_title">Residential Type</string>
    <string name="no_of_floors_title_textview">No of Floors</string>
    <string name="free_survey_requirement_textview">Do You Require Free Survey?</string>
    <string name="survey_yes">Yes</string>
    <string name="survey_no">No</string>
    <string name="door_to_door_radioText">Door to Door</string>
    <string name="door_to_port_radiotext">Door to Port</string>
    <string name="type_of_service_title">Type Of Service</string>
    <string name="delivery_to_textview">Delivery To</string>
    <string name="estimated_weight_textview">Estimated Weight</string>
    <string name="estimated_volume">Estimated Volume</string>
    <string name="select_your_diplomacy_textview">Select your Diplomacy</string>
    <string name="diplomat_radiobtn">Diplomat</string>
    <string name="non_diplomat_radiobtn">Non Diplomat</string>
    <string name="remarks_textview">Remarks</string>
    <string name="estimated_date_of_move_textview">Estimated Date of Move</string>
    <string name="remarks_textview_hint">Write your remarks here</string>
    <string name="myanmar_custom_rule_textview">Myanmar Custom Rule</string>
    <string name="add_document_textview">Add Document</string>
    <string name="submit_button_textview">SUBMIT</string>
    <string name="use_elevator_alert_textview">Do you want to use Elevator?</string>
    <string name="user_registration_header_textview">NEW USER REGISTRATION</string>
    <string name="fill_your_details_header_textview">Fill Your Details</string>
    <string name="register_btn_text">NEW USER ? REGISTER</string>
    <string name="already_registered">ALREADY REGISTERED? LOGIN HERE</string>
    <string name="login_header">LOGIN</string>
    <string name="otp_hint_textview">OTP</string>
    <string name="login_user_prompt">Enter your mobile number and password to login</string>
    <string name="get_otp_to_loginbtn_text">GET OTP TO LOGIN</string>
    <string name="country_of_origin_textview">Country Of Origin</string>
    <string name="estimated_date_of_arrival_textview">Estimated date of Arrival</string>
    <string name="select_floor_textview">Select Floor</string>
    <string name="air_inbound_header">AIR INBOUND</string>
    <string name="register_firstname_textview">First Name</string>
    <string name="register_lastname_textview">Last Name</string>
    <string name="register_mobile">Mobile Number</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="verify_otp_header">Verify OTP</string>
    <string name="otp_type_textview">Type your OTP Here</string>
    <string name="otp_instruction_textview">Enter the OTP that you will receive via SMS</string>
    <string name="otp_textview_title">OTP</string>
    <string name="register_btntext">REGISTER</string>
    <string name="logout_warning_alert_text">Do you really want to Logout?</string>
    <string name="exit_warning_text">Do you really want to Exit?</string>
    <string name="box_size_label_one">16\" X 16\" X 12\"</string>
    <string name="box_size_label_two">18\" X 18\" X 16\"</string>
    <string name="box_size_label_three">18\" X 18\" X 24\"</string>
    <string name="box_size_label_four">22\" X 22\" X 22\"</string>
    <string name="box_size_label_five">15\" X 15\" X 10\"</string>
    <string name="Open">Open Navigation Drawer</string>
    <string name="Close">Close Navigation Drawer </string>
    <string name="size_and_no_of_boxes"><![CDATA[Size & No of Boxes]]></string>
    <string name="no_of_boxes_hint">No of Boxes</string>
    <string name="bubble_textview">Bubble</string>
    <string name="bubble_500yard">500 Yard</string>
    <string name="bubble_100yard">100 Yard</string>
    <string name="tape_textview">Tape</string>
    <string name="white_yard_tape">White (Yard)</string>
    <string name="meters_hint">meters</string>
    <string name="yellow_yard_textview">Yellow (Yard)</string>
    <string name="foam_paper_textview">Foam Paper</string>
    <string name="inches_textview">Inches</string>
    <string name="packing_paper">Packing Paper</string>
    <string name="bundle_textview">Bundle</string>
    <string name="number_hint">number</string>
    <string name="size_textview">Size</string>
    <string name="custom_clearence_air_option">Air</string>
    <string name="or_option">OR</string>
    <string name="custom_clearence_sea_option">Sea</string>
    <string name="export_button">Export</string>
    <string name="import_button">Import</string>
    <string name="air_way_bill">Air Way Bill</string>
    <string name="bill_textview">Bill</string>
    <string name="date_hint">Date</string>
    <string name="goods_hint">Goods</string>
    <string name="volume_unit">CC</string>
    <string name="kilograms_hint">Kilograms</string>
    <string name="quantity_textview">Quantity</string>
    <string name="port_of_entry_textview">Port of Entry</string>
    <string name="port_textview">Port</string>
    <string name="arrival_port_textview">Arrival Airport</string>
    <string name="airport_hint">Airport</string>
    <string name="pickup_from_textview">Pickup From</string>
    <string name="place_hint">Place</string>
    <string name="pickup_date_hint">Pickup Date</string>
    <string name="date_format">DD/MM/YYYY</string>
    <string name="choose_time_hint">Choose Time</string>
    <string name="pickup_time_textview">Pickup Time</string>
    <string name="deliver_time_textview">Deliver Time</string>
    <string name="delivery_date_textview">Delivery Date</string>
    <string name="delivery_time_textview">Delivery Time</string>
    <string name="types_of_goods_textview">Types of Goods</string>
    <string name="name_goods">Name</string>
    <string name="cc_hint">CC</string>
    <string name="delivery_address_textview">Delivery Address</string>
    <string name="sea_outbound_header">SEA OUTBOUND</string>
    <string name="shipment_type_textview">Shipment Type</string>
    <string name="twenty_feet_shipment_option">20 feet</string>
    <string name="fourty_feet_shipment_option">40 feet</string>
    <string name="lcl_shipment_option">LCL</string>
    <string name="sea_inbound_header">SEA INBOUND</string>
    <string name="truck_types">Type of Truck</string>
    <string name="package_type_textview">Package Type</string>
    <string name="open_type_radiooption">Open Type</string>
    <string name="box_type_radiooption">Box Type</string>
    <string name="address_hint">Address</string>
    <string name="labour_yes">Yes</string>
    <string name="labour_no">No</string>
    <string name="labour_details_textview">Labour Details</string>
    <string name="no_of_labours_textview">No of Labours</string>
    <string name="weight_textview">Weight</string>
    <string name="volume_textview">Volume</string>
    <string name="distance_textview">Distance</string>
    <string name="packaging_estimated_date">Estimated date of Packaging</string>
    <string name="location_textview">Location</string>
    <string name="current_location_hint">Current Location</string>
</resources>