<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_marginStart="@dimen/_4sdp"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/packaging_header"/>

            </RelativeLayout>



        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:orientation="vertical">


            <android.support.v7.widget.CardView

                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_25sdp"
                android:layout_marginEnd="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_25sdp"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="@dimen/_6sdp">

                <LinearLayout

                    android:background="@drawable/bg_layout"
                    android:layout_width="match_parent"
                    android:paddingBottom="@dimen/_1sdp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:text="@string/packaging_estimated_date"
                            android:textSize="@dimen/_10sdp"/>


                        <EditText
                            android:id="@+id/packagingDate"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/date_hint"
                            android:textSize="@dimen/_10sdp"/>

                    </LinearLayout>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/view_bgcolor" />



                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:text="@string/location_textview"
                            android:textSize="@dimen/_10sdp"/>


                        <EditText
                            android:id="@+id/packedLocation"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/current_location_hint"
                            android:textSize="@dimen/_10sdp"/>

                    </LinearLayout>


                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#e2e2e2" />


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:text="@string/types_of_goods_textview"
                            android:textSize="@dimen/_10sdp"/>


                        <EditText
                            android:id="@+id/goodsType"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/goods_hint"
                            android:textSize="@dimen/_10sdp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#e2e2e2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:text="@string/estimated_volume"
                            android:textSize="@dimen/_10sdp"/>


                        <EditText
                            android:id="@+id/package_volume"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/volume_textview"
                            android:textSize="@dimen/_10sdp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#e2e2e2" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/_10sdp"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingEnd="@dimen/_10sdp"
                            android:gravity="end"
                            android:textColor="@android:color/white"
                            android:background="@color/colorPrimary"
                            android:text="@string/weight_textview"
                            android:textSize="@dimen/_10sdp"/>


                        <EditText
                            android:id="@+id/packageWeight"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:paddingTop="@dimen/_15sdp"
                            android:paddingStart="@dimen/_10sdp"
                            android:paddingBottom="@dimen/_10sdp"
                            android:background="@android:color/transparent"
                            android:hint="@string/weight_textview"
                            android:textSize="@dimen/_10sdp"/>

                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="#e2e2e2" />





                </LinearLayout>

            </android.support.v7.widget.CardView>




            <ProgressBar
                android:id="@+id/package_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"/>



            <EditText
                android:id="@+id/package_remarks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_layout"
                android:layout_marginStart="@dimen/_30sdp"
                android:layout_marginEnd="@dimen/_30sdp"
                android:inputType="textMultiLine"
                android:layout_marginTop="@dimen/_40sdp"
                android:paddingStart="@dimen/_10sdp"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_100sdp"
                android:textAlignment="center"
                android:hint="@string/remarks_textview_hint"/>



            <Button
                android:id="@+id/package_submitBtn"
                android:layout_width="match_parent"
                android:background="@drawable/button_bg"
                android:visibility="visible"
                android:text="@string/submit_button_textview"
                android:textColor="@android:color/white"
                android:layout_marginTop="@dimen/_30sdp"
                android:textAllCaps="false"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_40sdp"
                android:layout_marginEnd="@dimen/_40sdp"/>





        </LinearLayout>



    </android.support.v4.widget.NestedScrollView>


</android.support.design.widget.CoordinatorLayout>