<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="@dimen/_46sdp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_width="@dimen/_30sdp"
                    android:layout_height="@dimen/_30sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:src="@drawable/ic_arrow_back_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:layout_centerInParent="true"
                    android:textSize="@dimen/_16sdp"
                    android:text="@string/overview_text_header"/>

            </RelativeLayout>



        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:background="@android:color/white"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginStart="@dimen/_30sdp"
                    android:src="@drawable/ic_filter_black_24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_32sdp"
                    android:text="@string/rooms_and_photos_title"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:textSize="@dimen/_14sdp"
                    android:textStyle="bold"
                    android:textColor="@color/textColor"/>

            </LinearLayout>



            <Button
                android:id="@+id/addRoomBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:background="@color/colorPrimary"
                android:paddingStart="@dimen/_20sdp"
                android:text="@string/add_a_room_button_label"
                android:textAlignment="viewStart"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_add_black_24dp"
                android:drawablePadding="@dimen/_20sdp"
                android:paddingEnd="@dimen/_10sdp"
                android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"/>




        </LinearLayout>


    </android.support.v4.widget.NestedScrollView>










</android.support.design.widget.CoordinatorLayout>